--- a/ac.soton.coda.licence/build.properties
+++ b/ac.soton.coda.licence/build.properties
@@ -1,6 +1,10 @@
 bin.includes = feature.xml,\
-               feature.properties
-src.includes = feature.xml,\
                feature.properties,\
+               license.html,\
+               licence.html
+src.includes = feature.properties,\
                build.properties,\
-               .project
+               .project,\
+               license.html,\
+               feature.xml,\
+               licence.html
