--- a/ac.soton.coda.licence/.project
+++ b/ac.soton.coda.licence/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ac.soton.coda.license</name>
+	<name>ac.soton.coda.licence</name>
 	<comment></comment>
 	<projects>
 	</projects>
