--- a/ac.soton.coda.licence/feature.properties
+++ b/ac.soton.coda.licence/feature.properties
@@ -10,41 +10,102 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-CODALicenseFeatureName=CODA License
+CODALicenceFeatureName=CODA License
 
 # "providerName" property - name of the company that provides the feature
-CODALicenseFeatureVendor=University of Southampton
+CODALicenceFeatureVendor=University of Southampton
 
 # "updateSiteName" property - label for the update site
-CODALicenseUpdateSiteName=TBA
+CODALicenceUpdateSiteName=TBA
 
 # "description" property - description of the feature
-CODALicenseDescription=\
+CODALicenceDescription=\
 This feature provides the shared license for CODA platform \
 -------------------------------------------------------------------\n\
 Release history:\n\
+- 1.1.0: CODA Software User Agreement.\n\
+- 1.0.0: Initial version
 
 # "copyright" property - copyright of the feature
-CODALicenseCopyright=Copyright (c) 2015 AWE plc. and University of Southampton. All rights reserved.
+CODALicenceCopyright=Copyright (c) 2015 AWE plc. and University of Southampton. All rights reserved.
 
-# "licenseURL" property - URL of the "Feature License"
+# "licenseURL" property - URL of the "Feature Licence"
 # do not translate value - just change to point to a locale-specific HTML page
-CODALicenseURL=license.html
+CODALicenceURL=licence.html
 
-# "license" property - text of the "Feature Update License"
-# should be plain text version of license agreement pointed to be "licenseURL"
-CODALicense=\
-Company Confidential. Unauthorised use is prohibited.\n\
-Any queries regarding authorisation to use this product should be directed to AWE Commercial IPR Manager.\n\
+# "license" property - text of the "Feature Update Licence"
+# should be plain text version of license agreement pointed to be "licenceURL"
+CODALicence=\
+CODA Software User Agreement\n\
 \n\
-Authorisation for US government purposes under 1958 Mutual Defence Agreement (MDA)\n\
-Crown owned copyright (2015). The information is provided under the auspices of the Agreement for Co-operation on the Uses\n\
-of Atomic Energy for Mutual Defence Purposes. All intellectual property rights existing in this information remain the property\n\
-of the Secretary of State for Defence of the United Kingdom of Great Britain and Northern Ireland. The information may be used \n\
-for US government information and evaluation purposes only and shall not be used for any other purpose, or communicated, \n\
-transferred or disclosed to any third party without the prior written permission of the Secretary of State. Any requests for \n\
-further use or disclosure of the information should, in the first instance, be directed to AWE Commercial IPR Manager.\n\
+February 2nd, 2016\n\
 \n\
-<June 19th, 2015>
-
+Usage Of Content\n\
+\n\
+All intellectual property rights existing in this information remain the \
+property of the Secretary of State for Defence of the United Kingdom of Great \
+Britain and Northern Ireland. The information may not be used or disclosed \
+otherwise that is provided for by the above-mentioned licence without the prior \
+written permission of the Secretary of State, as represented by the Copyright \
+Unit, Defence Intellectual Property Rights, Poplar 2 #2214, MOD Abbey Wood South, \
+Bristol BS34 8JH, UNITED KINGDOM.\n\
+\n\
+CODA is provided on the basis that the US Government will disclose to the UK \
+Ministry of Defence (via AWE) any information, test results, modifications or \
+further developments based on or derived from the disclosed information and will \
+authorise the use of such information for UK Government purposes on the same terms \
+(i.e. under the terms of the Creative Commons Attribution-NonCommercial- ShareAlike \
+4.0 International License (CC BY NC SA 4.0)).\n\
+\n\
+For the avoidance of doubt, the Secretary of State of Defence for the United \
+Kingdom of Great Britain and Northern Ireland does not provide any indemnity, \
+and does not warrant the accuracy or completeness of the information, nor does \
+it warrant the suitability or completeness of the information for any particular \
+use or application.\n\
+\n\
+Any requests for further use or disclosure of the information should, in the \
+first instance, be directed to AWE Commercial (via the Formal Methods team at \
+AWE).\n\
+\n\
+Applicable Licences\n\
+Unless otherwise indicated, all Content made available by the CODA project is \
+provided to you under the terms and conditions of one of the following licences.\n\
+\n\
++ The Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International 
+License (CC BY NC SA 4.0). A copy of the CC BY NC SA 4.0 is available at \
+https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode.\n\
++ Eclipse Public License Version 1.0 ("EPL") (available at \
+http://www.eclipse.org/legal/epl-v10.html)\n\
+\n\
+Content includes, but is not limited to, source code, object code, documentation \
+and other files maintained in the CODA repository ("Repository").\n\
+\n\
+The terms and conditions governing Features and Included Features should be \
+contained in files named "licence.html" ("Feature Licences"). Feature Licences \
+may be located in any directory of a Download or Module including, but not \
+limited to the following locations:\n\
+\n\
++ Feature directories\n\
++ Shared-licence feature ac.soton.coda.licence\n\
+\n\
+Note: if a Feature made available by the CODA Project is installed using the \
+Eclipse Update Manager, you must agree to a licence ("Feature Update Licence") \
+during the installation process. If the Feature contains Included Features, the \
+Feature Update Licence should either provide you with the terms and conditions \
+governing the Included Features or inform you where you can locate them. Feature \
+Update Licences may be found in the "licence" property of files named \
+"feature.properties" found within a Feature. Such Feature Licences, and Feature \
+Update Licences contain the terms and conditions (or references to such terms \
+and conditions) that govern your use of the associated Content in that directory.\n\
+\n\
+THE FEATURE LICENCES, AND FEATURE UPDATE LICENCES MAY REFER TO THE CC BY NC SA \
+4.0, EPL OR OTHER LICENCE AGREEMENTS, NOTICES OR TERMS AND CONDITIONS.\n\
+\n\
+IT IS YOUR OBLIGATION TO READ AND ACCEPT ALL SUCH TERMS AND CONDITIONS PRIOR TO \
+USE OF THE CONTENT. If no Feature Licence, or Feature Update Licence is provided, \
+please contact the CODA Project to determine what terms and conditions govern \
+that particular Content.\n\
+\n\
+Java and all Java-based trademarks are trademarks of Sun Microsystems, Inc. in \
+the United States, other countries, or both.
 ########### end of license property ##########################################
