Fix new line typo for the licence text

--- a/ac.soton.coda.licence/feature.properties
+++ b/ac.soton.coda.licence/feature.properties
@@ -71,7 +71,7 @@ Applicable Licences\n\
 Unless otherwise indicated, all Content made available by the CODA project is \
 provided to you under the terms and conditions of one of the following licences.\n\
 \n\
-+ The Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International 
++ The Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International \
 License (CC BY NC SA 4.0). A copy of the CC BY NC SA 4.0 is available at \
 https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode.\n\
 + Eclipse Public License Version 1.0 ("EPL") (available at \
