--- a/ac.soton.coda.doc/latex/vhdl/build.gradle
+++ b/ac.soton.coda.doc/latex/vhdl/build.gradle
@@ -19,7 +19,9 @@ ext {
   BIBTEX = 'bibtex'
   REQUIRED_FILES = ['coda.sty', 'eventB.sty', 'plastex.sty', 'coda-user_agreement.tex']
   COPY_TASK_PREFIX = 'copySty'
-  HTML_FOLDER = '../../../ac.soton.coda.vhdl.doc/html/'
+  ROOT_FOLDER = '../../../..'
+  HTML_FOLDER = ROOT_FOLDER + '/code/ac.soton.coda.vhdl.doc/html'
+  DOCUMENTATION_FOLDER = ROOT_FOLDER + '/documentations'
 }
 
 /* The project */
@@ -70,11 +72,19 @@ task pdf(type : Exec) {
   }   
 }
 
-task html(type: Exec) {
+task pdfDocument(type: Exec) {
+  dependsOn pdf
+  inputs.files PDFFile
+  outputs.file DOCUMENTATION_FOLDER + PDFFile
+
+  commandLine 'cp', PDFFile, DOCUMENTATION_FOLDER + PDFFile
+}
+
+task plastex(type: Exec) {
   dependsOn aux
   inputs.files BBLFile, fileTree('.').include('**/*.tex'), fileTree('.').include('**/*.sty')
   outputs.dir HTML_FOLDER
-  commandLine 'plastex', '-d', "$HTML_FOLDER", '--theme=python', "$TEXFile"
+  commandLine './plastex.sh'
 }
 
 task clean(type: Exec) {
@@ -82,5 +92,5 @@ task clean(type: Exec) {
 }
 
 task build {
-  dependsOn 'pdf', 'html'
+  dependsOn 'pdfDocument', 'plastex'
 }
