--- a/ac.soton.coda.doc/latex/vhdl/build.gradle
+++ b/ac.soton.coda.doc/latex/vhdl/build.gradle
@@ -17,7 +17,7 @@ ext {
   BASENAME = 'vhdl-user_manual'
   LATEX = 'pdflatex'
   BIBTEX = 'bibtex'
-  REQUIRED_FILES = ['coda.sty', 'eventB.sty', 'plastex.sty', 'coda-user_agreement.tex']
+  REQUIRED_FILES = ['coda.sty', 'eventB.sty', 'plastex.sh', 'plastex.sty', 'coda-user_agreement.tex']
   COPY_TASK_PREFIX = 'copySty'
   ROOT_FOLDER = '../../../..'
   HTML_FOLDER = ROOT_FOLDER + '/code/ac.soton.coda.vhdl.doc/html'
@@ -82,7 +82,7 @@ task plastex(type: Exec) {
   dependsOn aux
   inputs.files BBLFile, fileTree('.').include('**/*.tex'), fileTree('.').include('**/*.sty')
   outputs.dir HTML_FOLDER
-  commandLine './plastex.sh'
+  commandLine './plastex.sh', BASENAME, HTML_FOLDER
 }
 
 task clean(type: Exec) {
