--- a/ac.soton.coda.doc/latex/build.gradle
+++ b/ac.soton.coda.doc/latex/build.gradle
@@ -18,7 +18,7 @@ ext {
   LATEX = 'pdflatex'
   BIBTEX = 'bibtex'
   COPY_TASK_PREFIX = 'copySty'
-  ROOT_FOLDER = '../../../..'
+  ROOT_FOLDER = '../../../'
   HTML_FOLDER = ROOT_FOLDER + '/code/ac.soton.coda.vhdl.doc/html'
   DOCUMENTATION_FOLDER = ROOT_FOLDER + '/documentations'
 }
