--- a/ac.soton.coda.doc/latex/component_diagrams/build.gradle
+++ b/ac.soton.coda.doc/latex/component_diagrams/build.gradle
@@ -17,7 +17,7 @@ ext {
   BASENAME = 'component_diagrams-user_manual'
   LATEX = 'pdflatex'
   BIBTEX = 'bibtex'
-  REQUIRED_FILES = ['plastex.sh', 'plastex.sty', 'sed_commands', 'coda-user_agreement.tex']
+  REQUIRED_FILES = ['coda.sty', 'plastex.sh', 'plastex.sty', 'sed_commands', 'coda-user_agreement.tex']
   COPY_TASK_PREFIX = 'copySty'
   ROOT_FOLDER = '../../../..'
   HTML_FOLDER = ROOT_FOLDER + '/code/ac.soton.eventb.emf.components.doc/html'
