CODA Licence Updates on March 23rd 2017. - (c) Crown owned copyright (2015) (UK Ministry of Defence) - CODA Software User Agreement updated (EPL-based).

--- a/ac.soton.coda.licence/feature.properties
+++ b/ac.soton.coda.licence/feature.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2011 AWE
+# Copyright (c) 2017 AWE
 # All rights reserved. 
 # This program is private property.
 ###############################################################################
@@ -23,11 +23,12 @@ CODALicenceDescription=\
 This feature provides the shared license for CODA platform \
 -------------------------------------------------------------------\n\
 Release history:\n\
+- 1.1.1: Update CODA Software User Agreement (EPL-based).
 - 1.1.0: CODA Software User Agreement.\n\
 - 1.0.0: Initial version
 
 # "copyright" property - copyright of the feature
-CODALicenceCopyright=Copyright (c) 2015 AWE plc. and University of Southampton. All rights reserved.
+CODALicenceCopyright=(c) Crown owned copyright (2017) (UK Ministry of Defence).
 
 # "licenseURL" property - URL of the "Feature Licence"
 # do not translate value - just change to point to a locale-specific HTML page
@@ -38,14 +39,14 @@ CODALicenceURL=licence.html
 CODALicence=\
 CODA Software User Agreement\n\
 \n\
-February 2nd, 2016\n\
+March 23rd, 2017\n\
 \n\
 Usage Of Content\n\
 \n\
 All intellectual property rights existing in this information remain the \
 property of the Secretary of State for Defence of the United Kingdom of Great \
 Britain and Northern Ireland. The information may not be used or disclosed \
-otherwise that is provided for by the above-mentioned licence without the prior \
+otherwise that is provided for by the licence without the prior \
 written permission of the Secretary of State, as represented by the Copyright \
 Unit, Defence Intellectual Property Rights, Poplar 2 #2214, MOD Abbey Wood South, \
 Bristol BS34 8JH, UNITED KINGDOM.\n\
@@ -54,8 +55,7 @@ CODA is provided on the basis that the US Government will disclose to the UK \
 Ministry of Defence (via AWE) any information, test results, modifications or \
 further developments based on or derived from the disclosed information and will \
 authorise the use of such information for UK Government purposes on the same terms \
-(i.e. under the terms of the Creative Commons Attribution-NonCommercial- ShareAlike \
-4.0 International License (CC BY NC SA 4.0)).\n\
+(i.e. under the terms of the Eclipse Public License Version 1.0 (EPL)).\n\
 \n\
 For the avoidance of doubt, the Secretary of State of Defence for the United \
 Kingdom of Great Britain and Northern Ireland does not provide any indemnity, \
@@ -71,9 +71,6 @@ Applicable Licences\n\
 Unless otherwise indicated, all Content made available by the CODA project is \
 provided to you under the terms and conditions of one of the following licences.\n\
 \n\
-+ The Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International \
-License (CC BY NC SA 4.0). A copy of the CC BY NC SA 4.0 is available at \
-https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode.\n\
 + Eclipse Public License Version 1.0 ("EPL") (available at \
 http://www.eclipse.org/legal/epl-v10.html)\n\
 \n\
@@ -98,8 +95,8 @@ Update Licences may be found in the "licence" property of files named \
 Update Licences contain the terms and conditions (or references to such terms \
 and conditions) that govern your use of the associated Content in that directory.\n\
 \n\
-THE FEATURE LICENCES, AND FEATURE UPDATE LICENCES MAY REFER TO THE CC BY NC SA \
-4.0, EPL OR OTHER LICENCE AGREEMENTS, NOTICES OR TERMS AND CONDITIONS.\n\
+THE FEATURE LICENCES, AND FEATURE UPDATE LICENCES MAY REFER TO THE \
+EPL OR OTHER LICENCE AGREEMENTS, NOTICES OR TERMS AND CONDITIONS.\n\
 \n\
 IT IS YOUR OBLIGATION TO READ AND ACCEPT ALL SUCH TERMS AND CONDITIONS PRIOR TO \
 USE OF THE CONTENT. If no Feature Licence, or Feature Update Licence is provided, \
