--- a/ac.soton.coda.licence/feature.properties
+++ b/ac.soton.coda.licence/feature.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# (c) Crown owned copyright (2017) (UK Ministry of Defence)
+# (c) Crown owned copyright (2017-2018) (UK Ministry of Defence)
 #
 # All rights reserved. This program and the accompanying materials are 
 # made available under the terms of the Eclipse Public License v1.0 which
@@ -34,7 +34,7 @@ Release history:\n\
 - 1.0.0: Initial version\n\
 
 # "copyright" property - copyright of the feature
-CODALicenceCopyright=(c) Crown owned copyright (2017) (UK Ministry of Defence).
+CODALicenceCopyright=(c) Crown owned copyright (2017-2018) (UK Ministry of Defence).
 
 # "licenseURL" property - URL of the "Feature Licence"
 # do not translate value - just change to point to a locale-specific HTML page
