fix problem in CODA licence text
(This means service re-issue of all CODA features)

--- a/ac.soton.coda.licence/feature.properties
+++ b/ac.soton.coda.licence/feature.properties
@@ -52,16 +52,10 @@ Usage Of Content\n\
 All intellectual property rights existing in this information remain the \
 property of the Secretary of State for Defence of the United Kingdom of Great \
 Britain and Northern Ireland. The information may not be used or disclosed \
-otherwise that is provided for by the licence without the prior \
+otherwise than is provided for by the licence without the prior \
 written permission of the Secretary of State, as represented by the Copyright \
 Unit, Defence Intellectual Property Rights, Poplar 2 #2214, MOD Abbey Wood South, \
 Bristol BS34 8JH, UNITED KINGDOM.\n\
-\n\
-CODA is provided on the basis that the US Government will disclose to the UK \
-Ministry of Defence (via AWE) any information, test results, modifications or \
-further developments based on or derived from the disclosed information and will \
-authorise the use of such information for UK Government purposes on the same terms \
-(i.e. under the terms of the Eclipse Public License Version 1.0 (EPL)).\n\
 \n\
 For the avoidance of doubt, the Secretary of State of Defence for the United \
 Kingdom of Great Britain and Northern Ireland does not provide any indemnity, \
